syntax = "proto3";

option go_package = "mini/proto/cs";

package mini;

message ChoiceBiRequest {
        string Option1 = 1;
        string Option2 = 2;
    }

message ChoiceReply {
    string Option = 1;
    int32 ReplyID = 2;
}

service Mini {
    rpc Choice(ChoiceBiRequest) returns (ChoiceReply) {}
}
